<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Info">


    <TableLayout
        android:id="@+id/infodetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="34dp"
        android:layout_alignParentRight="true">

        <TableRow
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="30dp">

            <TextView
                android:id="@+id/addresslabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addresslabel"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp" />

        </TableRow>

        <TableRow
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="30dp">

            <TextView
                android:id="@+id/phonelabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phonelabel"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp" />

        </TableRow>

        <TableRow
            android:id="@+id/price_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="30dp">

            <TextView
                android:id="@+id/pricelabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pricelabel"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp" />
        </TableRow>

        <TableRow
            android:id="@+id/rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:minHeight="30dp">

            <TextView
                android:id="@+id/ratinglabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ratinglabel"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RatingBar
                    android:id="@+id/Rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleX="0.5"
                    android:scaleY="0.5"
                    android:numStars="5" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/google_page"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:minHeight="30dp">

            <TextView
                android:id="@+id/googlelabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/googlelabel"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp" />
        </TableRow>

        <TableRow
            android:id="@+id/website"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:minHeight="30dp">

            <TextView
                android:id="@+id/websitelabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/websitelabel"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp" />
        </TableRow>
    </TableLayout>

</RelativeLayout>